# django-webpack

./: .dockerignore  .gitignore  LICENSE  README.md  babel.config.json  concepts.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  index.js  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
aa_project/: asgi.py  settings.py  urls.py  workers.py  wsgi.py
aa_project/settings/: base.py  dev.py  prod.py
core/: admin.py  endpoints.py  models.py  schemas.py  urls.py  views.py
core/assets/: index.js  webpack-stats.json
core/migrations/: 0001_initial.py  0002_remove_task_slug.py  0003_remove_task_image.py
core/static/: webpack-stats.json
core/static/scripts/: index.js  users.js
core/static/scss/: _buttons.scss  styles.scss
core/templates/core/: _base.html  alpine.html  appointments.html  area_of_circle.html  base.html  bs_wp_examples.html  flatpickr.html  home.html  htmx.html  tasks.html  users.html  wp_examples.html
core/templates/core/components/: header.html
core/templates/core/head_tags/: temp.txt
core/templates/core/head_tags/css/: index.txt  vendors-node_modules_flatpickr_dist_themes_light_css.txt
core/templates/core/head_tags/js/: alpinejs.txt  flatpickr.txt  htmx.txt  index.txt  lodash_es.txt  runtime.txt  vendor.txt  vendors_node_modules_flatpickr_dist_flatpickr_min_js.txt  webpack_assets_vendor_flatpickr_js.txt
core/templates/core/head_tags/scripts/: scripts.txt
core/templates/core/head_tags/scripts/base/: alpinejs.txt  bootstrap.txt  htmx.txt  index.txt  runtime.txt  vendor.txt
core/templates/core/head_tags/scripts/child/: circle.txt  flatpickr.txt  lodash-es.txt  vendors-node_modules_popperjs_core_lib_index_js.txt  webpack_assets_scripts_circle_ts.txt
core/templates/core/head_tags/styles/: styles.txt
core/templates/core/head_tags/styles/base/: index.txt
core/templates/core/head_tags/styles/child/: flatpickr.txt  vendors-node_modules_flatpickr_dist_themes_light_css.txt
docker/dev/postgres/: init.sql
docker/dev/web/: Dockerfile
docker/postgres/dev/: Dockerfile
docker/prod/nginx/: Dockerfile  nginx.conf
docker/prod/web/: Dockerfile  entrypoint.sh  gunicorn.conf.py
src/: index.js
src/examples/: circle.js  circle.ts
src/scss/: styles.scss
static/: areaOfCircle.bundle.js  circle.bundle.js  index.bundle.js  main.bundle.js  runtime.bundle.js  users.bundle.js  usersAPI.bundle.js  vendor.bundle.js  vendors.bundle.js
static/core/templates/core/: _base.html
templates/: base_webpack.html
terraform/: 01_provider.tf  02_network.tf  03_securitygroups.tf  04_loadbalancer.tf  05_iam.tf  06_logs.tf  07_keypair.tf  08_ecs.tf  09_auto_scaling.tf  10_rds.tf  outputs.tf  variables.tf
terraform/deploy/: update_ecs.py
terraform/policies/: ecs-instance-role-policy.json
terraform/scripts/: init.sh
terraform/templates/: django_app.json.tpl
webpack/: babel.config.json  index.js  index.ts  tsconfig.json  webpack.analyze.js  webpack.base.js  webpack.common.js  webpack.dev.js  webpack.prod.js
webpack/assets/entries/: appointments.ts  base.ts  circle.ts  flatpickr.ts  index.ts
webpack/assets/scripts/: circle.js  circle.ts  flatpickr.js  vendor.js
webpack/assets/scss/: _buttons.scss  _images.scss  styles.scss
webpack/assets/styles/: _links.scss  _vendors.scss  flatpickr.scss  styles.scss
webpack/core/templates/core/: _base.html
webpack/entries/: appointments.ts  base.ts  circle.ts
webpack/funcs/: output.js
webpack/management/: create_head_tags.py  split_head_tags.py
webpack/setup/: config.json  stats.json
webpack/stats/: webpack-stats.json
webpack/templates/: base_webpack.ejs  base_webpack.html  scripts.ejs  styles.ejs
webpack/types/: index.d.ts
