# -- POETRY CONFIG ----------------------------------------------------------------------

[tool.poetry]
name = "django-webpack"
version = "0.1.0"
description = "An Example of a Django Project with Webpack Integration"
authors = ["Wayne Lambert <wayne.a.lambert@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.10.7"
Django = "4.2.0"
django-htmx = "^1.14.0"
rich = "^13.3.4"
httpx = "^0.24.0"
django-extensions = "3.2.1"
django-webpack-loader = "1.7.0"
django-ninja = "^0.21.0"
psycopg2-binary = "2.9.5"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
django-ses = "^3.3.0"
django-allow-cidr = "^0.6.0"
boto3 = "^1.26.113"
click = "8.1.3"
django-storages = "^1.13.2"
phonenumbers = "^8.13.9"
pillow = "^9.5.0"
whitenoise = "^6.4.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "4.0.0"
pycodestyle = "2.10.0"
pylint-django = "2.5.3"
black = "23.3.0"
pylint = "2.17.2"
bpython = "0.24"
ptvsd = "4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -- PYLINT CONFIG ----------------------------------------------------------------------

[tool.pylint.master]
jobs="0"    # Auto-detect the number of processors
fail-under="10"
ignore-patterns='''
  \.eggs
  |_build
  |\.git
  |\.hg
  |\.mypy_cache
  |\.tox
  |\.venv
  |buck-out
  |build
  |conf.py
  |dist
'''
persistent = "no"
load-plugins = ["pylint_django"]
django-settings-module = "aa_project.settings"
limit-inference-results = "100"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
extension-pkg-whitelist = ""
exit-zero = "no"
from-stdin = "no"

[tool.pylint.message_control]
enable = [
  "F",  # Fatal
  "E",  # Error
  "W",  # Warning
  "R",  # Refactor
  "C",  # Convention
  "I",  # Informational
]
disable = """
  attribute-defined-outside-init,
  line-too-long,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  no-self-use,
"""

[tool.pylint.reports]
reports = "no"
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"
output-format = "colorized"
score = "no"

[tool.pylint.format]
max-line-length = "99"

[tool.pylint.basic]
good-names = "_, qs, pk"

[tool.pylint.miscellaneous]
notes="TODO, FIXME, DEBUG, NOTE, DONE, TEMP BLOCK"

# -- BLACK CONFIG -----------------------------------------------------------------------

[tool.black]
line-length = 99
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# -- ISORT CONFIG -----------------------------------------------------------------------

[tool.isort]
atomic = true
line_length = 99
profile = "black"
include_trailing_comma = true
force_single_line = false
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
skip_glob = "*/.venv/*, */node_modules/*, */.git/*, */migrations/*"

sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_django = "django"
known_third_party = [
  "rich",
  "boto3",
  "click",
]
known_local_folder = [
  "core",
]
